# egeria-mcp

./: .bumpversion.cfg  .codespellignore  .dockerignore  .env.example  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  connector_manifest.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
architecture/: index.html
concepts/: index.html
docker/: Dockerfile  debug.Dockerfile  mcp.compose.yml
docs/: architecture.md  concepts.md  configuration.md  deployment.md  harvesters.md  index.md  installation.md  overview.md  platform.md  usage.md
egeria_mcp/: __init__.py  __main__.py  api_client.py  audit.py  auth.py  governed_routing.py  kg_ingest.py  lineage_scan.py  main_agent.json  mcp_config.json  mcp_server.py  reconcile.py
egeria_mcp/api/: __init__.py  api_client_egeria.py
egeria_mcp/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
egeria_mcp/harvest/: __init__.py  __main__.py  archer.py  archimate.py  archive.py  aris.py  automation.py  chat.py  containers.py  crm.py  datastores.py  dns.py  documentdb.py  erpnext.py  files.py  finance.py  hosts.py  identity.py  iot.py  kafka.py  knowledge.py  leanix.py  llmops.py  m365.py  mailing.py  markets.py  ml.py  monitoring.py  observability.py  odoo.py  processes.py  projects.py  proxy.py  repositories.py  runner.py  secrets.py  semantic.py  servicenow.py  topology.py  vectors.py  (+1 more)
egeria_mcp/mcp/: __init__.py  mcp_egeria.py
egeria_mcp/ontology/: __init__.py  certification.json  egeria.ttl
egeria_mcp/ontology/fixtures/: records.json
egeria_mcp/ontology/mappings/: source.yaml
egeria_mcp/ontology/migrations/: manifest.json
egeria_mcp/ontology/shapes/: connector.shacl.ttl
egeria_mcp/prompts/: governance_specialist.json
egeria_mcp/skills/egeria-glossary-terms/: SKILL.md  WORKFLOW.md
egeria_mcp/skills/egeria-governance-classification/: SKILL.md  WORKFLOW.md
egeria_mcp/skills/egeria-lineage-tracing/: SKILL.md  WORKFLOW.md
egeria_mcp/skills/egeria-mcp-operations/: SKILL.md
egeria_mcp/skills/egeria-mcp-operations/agents/: openai.yaml
egeria_mcp/skills/egeria-mcp-operations/references/: catalog.md
egeria_mcp/skills/egeria-starter/: SKILL.md
harvesters/: index.html
overview/: index.html
search/: search_index.json
tests/: test_harvest_enterprise_connectors.py  test_harvest_xml_security.py  test_kg_ingest.py  test_startup.py
