[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "egeria-mcp"
version = "1.0.2"
description = "Apache Egeria open-metadata API + MCP Server for Agentic AI!"
readme = "README.md"
classifiers = [ "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=1.0.0", "httpx>=0.27.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
egeria = [ "pyegeria>=6.0 ; python_version >= '3.12'",]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
harvest = [ "pymongo>=4.0", "pyyaml>=6.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0", "pyegeria>=6.0 ; python_version >= '3.12'", "pymongo>=4.0", "pyyaml>=6.0",]
test = [ "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
egeria-mcp = "egeria_mcp.mcp_server:mcp_server"

[project.entry-points."agent_utilities.skill_providers"]
egeria-mcp = "egeria_mcp.skills"

[project.entry-points."agent_utilities.prompt_providers"]
egeria-mcp = "egeria_mcp.prompts"

# CONCEPT:AU-KG.ontology.package-federation-migration — federate this package's OWL/RDF ontology module into the
# agent-utilities hub (open-metadata assets, glossaries, governance). Resolved
# via iter_provider_dirs like the skill/prompt providers.
[project.entry-points."agent_utilities.ontology_providers"]
egeria-mcp = "egeria_mcp.ontology"

# Tier-1 mcp_tool source-preset leg (AU-KG.ingest.mcp-tool-connector): declares how
# the KG hub can sync Egeria glossary terms via this package's MCP server.
[project.entry-points."agent_utilities.source_connector_providers"]
egeria-mcp = "egeria_mcp.connectors"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [ "pytest-timeout>=2.4.0",]

[tool.setuptools.package-data]
egeria_mcp = [ "mcp_config.json", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
